<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txt_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_nombre"
        android:layout_marginLeft="5dp"
        android:text="@string/fecha"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/txt_fechabtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_fecha"
        android:textSize="16dp" />

    <Button
        android:id="@+id/btn_selectfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_fechabtn"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/seleccionar_fecha"
        android:textColor="@android:color/white"
        android:onClick="onclickdatepicker"/>

    <EditText
        android:id="@+id/edit_telefono"
        android:layout_below="@id/btn_selectfecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="number"
        android:textSize="16dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textSize="16dp"
        android:id="@+id/edit_email"
        android:layout_below="@id/edit_telefono"/>

    <TextView
        android:id="@+id/txt_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_marginLeft="5dp"
        android:text="@string/descripcion_contacto"
        android:textSize="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/edit_descripcion"
        android:layout_below="@id/txt_descripcion"/>

    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_descripcion"
        android:layout_marginTop="170dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="Siguiente"
        android:text="@string/siguiente"
        android:textColor="@android:color/white" />
</RelativeLayout>